<!-- Beschreibt konstante Strings welche in der App verwendet werden -->
<resources>
    <string name="app_name">ERP_Connect</string>
    <string name="keine_verbindung_try_again">Keine Verbindung. Try Again!</string>
    <string name="textFestnetz">Festnetz</string>
    <string name="verbindung_einstellen">Verbindung einstellen</string>
    <string name="descriptionAdresse">Adresse</string>
    <string name="descriptionStaat">Staat</string>
    <string name="descriptionPlz">PLZ</string>
    <string name="descriptionOrt">Ort</string>
    <string name="descriptionStreet">Straße</string>
    <string name="descriptionKontakt">Kontakt</string>
    <string name="descriptionMail">Mail</string>
    <string name="descriptionHomepage">Homepage</string>
    <string name="descriptionLand_vorwahl">Land-Vorwahl</string>
    <string name="descriptionOrt_vorwahl">Ort-Vorwahl</string>
    <string name="descriptionNummer">Nummer</string>
    <string name="descriptionNotiz">Notiz</string>
    <string name="text_button_ansprechpartner">Ihre Ansprechpartner</string>
    <string name="descriptionTelefon">Telefon</string>
    <string name="nav_title_konten">Konten</string>
    <string name="nav_title_kontakte">Kontakte</string>
    <string name="desc_callbutton">Call-Button</string>
    <string name="desc_smsbutton">SMS Button</string>
    <string name="desc_butMaps">Button Google Maps</string>
    <string name="desc_openBrowser">Open in Browser</string>
    <string name="text_menu_connection">Verbindungs-Eigenschaften</string>
    <string name="menu_retry">Retry</string>
    <string name="descPerson">Person</string>
    <string name="descVorname">Vorname</string>
    <string name="descNachname">Nachname</string>
    <string name="descSex">Geschlecht</string>
    <string name="descAbteilung">Abteilung</string>
    <string name="descFunktion">Funktion</string>
    <string name="descMobiltelefon">Mobiltelefon</string>
    <string name="descMobilBetreiber">Mobil-Betreiber</string>
    <string name="sexWeiblich">Weiblich</string>
    <string name="sexMännlich">Männlich</string>
    <string name="desc_butMail">Button for mail</string>
    <string name="anrufen">Anrufen</string>
    <string name="sms">SMS</string>
    <string name="navigiere">Navigiere</string>
    <string name="browser">Browser</string>
</resources>
