<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_kontoDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:fillViewport="true"
    tools:context=".konto_list.KontoListActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:id="@+id/textInputName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textInputKontoNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_ansprechpartner" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:orientation="horizontal"
            app:columnCount="4">

            <ImageView
                android:id="@+id/buttonCall"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:src="@drawable/ic_phone_24px"
                android:layout_marginEnd="10dp" />

            <ImageView
                android:id="@+id/buttonSMS"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:src="@drawable/ic_textsms_24px"
                android:layout_marginEnd="10dp" />

            <ImageView
                android:id="@+id/buttonMap"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:src="@drawable/ic_map_24px"
                android:layout_marginEnd="10dp" />

            <ImageView
                android:id="@+id/buttonURL"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:src="@drawable/ic_open_in_browser_24px"
                android:layout_marginEnd="10dp" />
        </androidx.gridlayout.widget.GridLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progressBar"
            android:visibility="visible" />

        <TableLayout
            android:id="@+id/tableDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:visibility="gone">

            <TableRow
                android:id="@+id/headlineAdresse"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionAdresse"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true" />
            </TableRow>

            <TableRow
                android:id="@+id/lineAdresse"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_blue_light" />
            </TableRow>

            <TableRow
                android:id="@+id/rowCountry"
            android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textStaat"
                    android:text="@string/descriptionStaat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textInputStaat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPLZ"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textPLZ"
                    android:text="@string/descriptionPlz"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textInputPLZ"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/rowCity"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textCity"
                    android:text="@string/descriptionOrt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textInputCity"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/rowStreet"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textStreet"
                    android:text="@string/descriptionStreet"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textInputStreet"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/headlineContact"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionKontakt"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true" />
            </TableRow>

            <TableRow
                android:id="@+id/lineContact"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_blue_light" />
            </TableRow>

            <TableRow
                android:id="@+id/rowMail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textMail"
                    android:text="@string/descriptionMail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textInputMail"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/rowWWW"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textWWW"
                    android:text="@string/descriptionHomepage"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textInputWWW"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/headlinePhone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionTelefon"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true" />
            </TableRow>

            <TableRow
                android:id="@+id/linePhone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_blue_light" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPrefixCountry"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textPrefixCountry"
                    android:text="@string/descriptionLand_vorwahl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textInputPrefixCountry"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPrefixCity"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textPrefixCity"
                    android:text="@string/descriptionOrt_vorwahl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textInputPrefixCity"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPhoneNumber"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textPhoneNumber"
                    android:text="@string/descriptionNummer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textInputPhoneNumber"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </TableRow>


            <TableRow
                android:id="@+id/headlineNote"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionNotiz"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true" />
            </TableRow>

            <TableRow
                android:id="@+id/lineNote"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_blue_light" />
            </TableRow>

            <TableRow
                android:id="@+id/rowNote"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/textInputNote"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textColor="@android:color/white" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>